--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 
-  'Lucida Grande',
-   'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 .App {
   text-align: center;
@@ -43,8 +42,8 @@ h3 {
   cursor: pointer;
   font-weight: 900;
   border-radius: 50%;
-   display: flex;
-   justify-content: center;
+  display: flex;
+  justify-content: center;
   width: 30px;
   height: 30px;
   border: 0;
@@ -52,6 +51,6 @@ h3 {
   top: 6px;
   right: 6px;
 }
-button{
+button {
   padding: 8px 15px;
 }
